; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/thunder/extr_nicvf_queues.c_nicvf_config_vlan_stripping.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/thunder/extr_nicvf_queues.c_nicvf_config_vlan_stripping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nicvf = type { i32, %struct.nicvf** }

@NIC_QSET_RQ_GEN_CFG = common dso_local global i32 0, align 4
@NETIF_F_HW_VLAN_CTAG_RX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nicvf_config_vlan_stripping(%struct.nicvf* %0, i32 %1) #0 {
  %3 = alloca %struct.nicvf*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.nicvf* %0, %struct.nicvf** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.nicvf*, %struct.nicvf** %3, align 8
  %8 = load i32, i32* @NIC_QSET_RQ_GEN_CFG, align 4
  %9 = call i64 @nicvf_queue_reg_read(%struct.nicvf* %7, i32 %8, i32 0)
  store i64 %9, i64* %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @NETIF_F_HW_VLAN_CTAG_RX, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i64, i64* %5, align 8
  %16 = or i64 %15, 33554432
  store i64 %16, i64* %5, align 8
  br label %20

17:                                               ; preds = %2
  %18 = load i64, i64* %5, align 8
  %19 = and i64 %18, -33554433
  store i64 %19, i64* %5, align 8
  br label %20

20:                                               ; preds = %17, %14
  %21 = load %struct.nicvf*, %struct.nicvf** %3, align 8
  %22 = load i32, i32* @NIC_QSET_RQ_GEN_CFG, align 4
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @nicvf_queue_reg_write(%struct.nicvf* %21, i32 %22, i32 0, i64 %23)
  store i32 0, i32* %6, align 4
  br label %25

25:                                               ; preds = %52, %20
  %26 = load i32, i32* %6, align 4
  %27 = load %struct.nicvf*, %struct.nicvf** %3, align 8
  %28 = getelementptr inbounds %struct.nicvf, %struct.nicvf* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = icmp slt i32 %26, %29
  br i1 %30, label %31, label %55

31:                                               ; preds = %25
  %32 = load %struct.nicvf*, %struct.nicvf** %3, align 8
  %33 = getelementptr inbounds %struct.nicvf, %struct.nicvf* %32, i32 0, i32 1
  %34 = load %struct.nicvf**, %struct.nicvf*** %33, align 8
  %35 = load i32, i32* %6, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds %struct.nicvf*, %struct.nicvf** %34, i64 %36
  %38 = load %struct.nicvf*, %struct.nicvf** %37, align 8
  %39 = icmp ne %struct.nicvf* %38, null
  br i1 %39, label %40, label %51

40:                                               ; preds = %31
  %41 = load %struct.nicvf*, %struct.nicvf** %3, align 8
  %42 = getelementptr inbounds %struct.nicvf, %struct.nicvf* %41, i32 0, i32 1
  %43 = load %struct.nicvf**, %struct.nicvf*** %42, align 8
  %44 = load i32, i32* %6, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds %struct.nicvf*, %struct.nicvf** %43, i64 %45
  %47 = load %struct.nicvf*, %struct.nicvf** %46, align 8
  %48 = load i32, i32* @NIC_QSET_RQ_GEN_CFG, align 4
  %49 = load i64, i64* %5, align 8
  %50 = call i32 @nicvf_queue_reg_write(%struct.nicvf* %47, i32 %48, i32 0, i64 %49)
  br label %51

51:                                               ; preds = %40, %31
  br label %52

52:                                               ; preds = %51
  %53 = load i32, i32* %6, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %6, align 4
  br label %25

55:                                               ; preds = %25
  ret void
}

declare dso_local i64 @nicvf_queue_reg_read(%struct.nicvf*, i32, i32) #1

declare dso_local i32 @nicvf_queue_reg_write(%struct.nicvf*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
